src/test/deca/context/invalid/ContextSansObjet/Unitaire/affichageImpossibleBoolean.deca
//Description:
//   affichage impossible d'un booléen
//
//Résultat:
// Erreur Contextuelle
//  ligne 9 :   Le type boolean n'est pas affichable (les types affichables sont int,float et string)
{
boolean bool=false;
print(bool);
}
